Stress test for high-throughput-logging, better JVM flags for profiling